--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
   /* background-size: cover;  */
   margin: -31px; 
   margin-left:-7px;
-  border: 6px solid rgba(0, 77, 64, 0.4); 
+  border: 6px solid rgba(158,156,159, 0.4); 
   border-radius: 50% !important;
 }
 
@@ -356,7 +356,7 @@ h3 {
 }
 
 .overlay {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: #CCC7C3;
   height: 100%;
   left: 0;
   position: absolute;
@@ -549,7 +549,7 @@ small {
 /* main .teal-text */
 
 .teal-text {
-  color: #008073 !important;
+  color: #4C4A48 !important;
 }
 
 /* .teal-text {
@@ -559,12 +559,10 @@ small {
 /* .teal */
 
 .teal {
-  background-color: #008073 !important;
+  /* banner */
+  background-color: #3F3F3F !important;
 }
 
-/* .teal {
-  background-color: #00695c !important;
-} */
 
 @media (min-width: 1200px) {
   #experience .container {
