--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,7 +140,7 @@ body {
 } */
 
 a {
-  color: #004d40;
+  color: #413C47;
 }
 
 /* main blockqoute */
@@ -473,7 +473,7 @@ a.hoverline {
 } */
 
 a.hoverline:hover {
-  border-bottom: 3px solid #004d40 !important;
+  border-bottom: 3px solid #3E3F41 !important;
 }
 
 #skills .card.large {
@@ -600,7 +600,7 @@ small {
     position: absolute;
   }
   nav a.button-collapse, nav a.button-collapse i {
-    color: #009688;
+    color: #0A080D;
     height: 56px;
     line-height: 56px;
   }
